@@ -131,11 +131,8 @@ sub dgProfiles
     my ($self) = @_;
     my @profiles = ();
 
-    push (@profiles, { number => 1, policy => 'deny',  groupName => 'defaultDeny' });
-    push (@profiles, { number => 2, policy => 'allow', groupName => 'defaultAllow' });
-
     # groups will have ids greater that this number
-    my $id = 3;
+    my $id = 1;
     foreach my $rowId ( @{ $self->ids() } ) {
         my $row = $self->row($rowId);
         my $name  = $row->valueByName('name');
