@@ -62,7 +62,7 @@ sub _table
                   fieldName => 'port',
                   printableName => __('Port'),
                   editable => 1,
-                  defaultValue => $self->parentModule->SQUID_PORT(),
+                  defaultValue => $self->parentModule->DEFAULT_PORT(),
                ),
           new EBox::Types::Int(
                   fieldName => 'cacheDirSize',
